--- a/ASM/src/main/resources/application.properties
+++ b/ASM/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;database=ShopDunk;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;database=ShopDunk5;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
